Small fix for overflow on small screens

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -5,6 +5,7 @@
   width: 100%;
   max-width: 90rem;
   height: 100%;
+  overflow: hidden;
 }
 
 .form {
